# music-preludes

./: .ghci  .gitignore  README.md  WRAPPERS  gui-clean.js  gui.html  lens.hs  music-preludes.cabal  newexport.hs
examples/: analysis.hs  annotatations.hs  bartok.hs  behavior.hs  canon.hs  canon.music  chopin.hs  chords.hs  complex.hs  duo.hs  dynamics.hs  erlkonig.hs  fugue1.hs  imitations.hs  long.hs  mikrokosmos.hs  mozart.hs  note_voice_score.hs  part.hs  phrases.hs  plot.hs  scheme.hs  schubert.hs  spanien.hs  stack.hs  streams.hs  test1.scm  test2.scm  time_signatures.hs  trio.hs  triplets.hs  triplets.music  try.hs  tuplet.hs  voices.hs
sketch/: API  average.hs  cynamics.hs  cynamicsBU.hs  qc.hs  rtm.hs
src/: music2ly.hs  music2musicxml.hs
src/Music/: Prelude.hs
src/Music/Prelude/: Basic.hs  CmdLine.hs  Inspectable.hs  Instances.hs  Piano.hs  Standard.hs  StringQuartet.hs  Varying.hs
tests/: .gitignore  Makefile  articulation_all_accents.music  articulation_all_separations.hs  articulation_legato.hs  articulation_portato.hs  articulation_staccato.hs  decl_style1.music  dynamics_constant.hs  generated_ref.sha  instances.hs  melody_chords.music  meta_clef1.hs  misc_counterpoint.hs  misc_counterpoint.music  originals_ref.sha  overlay_chords.music  partwise_legato.hs  pitch_inv.hs  pitch_inv.music  simple_figure.music  simple_start_later.music  special_gliss.music  special_harmonics.music  special_text.music  special_tremolo.hs  tests.hs  times.hs  times.music  track_single.music  voice_single.hs  voice_single.music
tests/golden/: articulation_all_accents.ly  articulation_all_accents.mid  articulation_all_accents.xml  articulation_all_separations.ly  articulation_all_separations.mid  articulation_all_separations.xml  articulation_legato.ly  articulation_legato.mid  articulation_legato.xml  articulation_portato.ly  articulation_portato.mid  articulation_portato.xml  articulation_staccato.ly  articulation_staccato.xml  decl_style1.xml  dynamics_constant.ly  dynamics_constant.mid  dynamics_constant.xml  melody_chords.ly  melody_chords.mid  melody_chords.xml  meta_annotations.ly  meta_annotations.mid  meta_annotations.xml  meta_clef1.ly  meta_clef1.mid  meta_clef1.xml  meta_composer.ly  meta_composer.mid  meta_composer.xml  meta_time_signature.ly  meta_time_signature.mid  meta_time_signature.xml  meta_title.mid  meta_title.xml  misc_counterpoint.ly  misc_counterpoint.mid  misc_counterpoint.xml  octaves.ly  octaves.mid  (+52 more)
tools/: music2ly.hs  music2midi.hs  music2musicxml.hs  music2pdf.hs  music2png.hs  music2svg.hs
