
name:               music-preludes
version:            1.2.1
cabal-version:      >= 1.2
author:             Hans Hoglund
maintainer:         Hans Hoglund
license:            BSD3
license-file:       COPYING
synopsis:           Some useful preludes for the Music Suite.
category:           Music
tested-with:        GHC
build-type:         Simple

description: 
    Some useful preludes for the Music Suite.

    This library is part of the Music Suite, see <http://musicsuite.github.com>.

library                    
    build-depends: 
        base >= 4 && < 5,
        vector-space,
        musicxml2,
        process,
        semigroups,
        music-score,
        music-pitch,
        music-pitch-literal,
        music-dynamics,
        music-dynamics-literal
        
    hs-source-dirs: src
    exposed-modules:
        Music.Prelude.Piano

executable "spanien"
    hs-source-dirs: src examples
    main-is: spanien.hs

executable "triplets"
    hs-source-dirs: src examples
    main-is: triplets.hs
