
name:               music-preludes
version:            1.2.1
cabal-version:      >= 1.2
author:             Hans Hoglund
maintainer:         Hans Hoglund
license:            BSD3
license-file:       COPYING
synopsis:           Some useful preludes for the Music Suite.
category:           Music
tested-with:        GHC
build-type:         Simple

description: 
    Some useful preludes for the Music Suite.

    This library is part of the Music Suite, see <http://musicsuite.github.com>.

library                    
    build-depends: 
        base >= 4 && < 5,
        vector-space,
        musicxml2,
        process,
        semigroups,
        monadplus,
        reverse-apply,
        music-score,
        music-pitch,
        music-pitch-literal,
        music-dynamics,
        music-dynamics-literal
        
    hs-source-dirs: src
    exposed-modules:
        Music.Prelude.Basic
        Music.Prelude.Piano
        Music.Prelude.StringQuartet

executable "complex"
    hs-source-dirs: src examples
    main-is: duo.hs

executable "duo"
    hs-source-dirs: src examples
    main-is: duo.hs

executable "erlkonig"
    hs-source-dirs: src examples
    main-is: erlkonig.hs

executable "triplets"
    hs-source-dirs: src examples
    main-is: triplets.hs

test-suite properties
    type: exitcode-stdio-1.0
    main-is: properties.hs
    hs-source-dirs: tests
    ghc-options: -w -threaded -rtsopts -with-rtsopts=-N
    build-depends:
        HUnit                       >= 1.2,
        QuickCheck                  >= 1.2 && < 1.3,
        test-framework              >= 0.6,
        test-framework-th           >= 0.2,
        test-framework-quickcheck   >= 0.3
