
name:                   music-preludes
version:                1.6
author:                 Hans Hoglund
maintainer:             Hans Hoglund
license:                BSD3
license-file:           COPYING
synopsis:               Some useful preludes for the Music Suite.
category:               Music
tested-with:            GHC
build-type:             Simple
cabal-version:          >= 1.10

description:
    Some useful preludes for the Music Suite.
    .
    This library is part of the Music Suite, see <http://music-suite.github.io>.

source-repository head
  type:                 git
  location:             git://github.com/music-suite/music-preludes.git

library
    build-depends:      base                    >= 4 && < 5,
                        lens,
                        vector-space,
                        vector-space-points,
                        lilypond                == 1.6,
                        musicxml2               == 1.6,
                        process,
                        semigroups,
                        data-default,
                        monadplus,
                        reverse-apply,
                        music-score             == 1.6,
                        music-pitch             == 1.6,
                        music-dynamics          == 1.6,
                        music-parts             == 1.6,
                        music-pitch-literal     == 1.6,
                        music-dynamics-literal  == 1.6
    exposed-modules:    Music.Prelude.Basic
                        Music.Prelude.Standard
                        Music.Prelude.Piano
                        Music.Prelude.StringQuartet
                        Music.Prelude.Instances
    hs-source-dirs:     src
    default-language:   Haskell2010
